DevOps/force-app/main/default/objects/Program__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <defaultValue>&quot;5 Day&quot;</defaultValue>
    <description>Business Hours field used to determine which business hours the Program uses for Case Note Locking</description>
    <inlineHelpText>Business Hours field used to determine which business hours the Program uses for Case Note Locking</inlineHelpText>
    <label>Business Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5 Day</fullName>
                <default>true</default>
                <label>5 Day</label>
            </value>
            <value>
                <fullName>7 Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>