DevOps/force-app/main/default/objects/Program__c/fields/COI__c.field-meta.xml
<CustomField>
    <fullName>COI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine if a program is a COI program</description>
    <inlineHelpText>Checkbox to determine if a program is a COI program</inlineHelpText>
    <label>COI Program</label>
    <type>Checkbox</type>
</CustomField>