DevOps/force-app/main/default/objects/Program__c/fields/PHN_Tag__c.field-meta.xml
<CustomField>
    <fullName>PHN_Tag__c</fullName>
    <description>Tags for PHN Reporter Upload</description>
    <inlineHelpText>Tags for PHN Reporter Upload</inlineHelpText>
    <label>PHN Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>