DevOps/force-app/main/default/objects/Program__c/recordTypes/AOD_Hub.recordType-meta.xml
<RecordType>
    <fullName>AOD_Hub</fullName>
    <active>true</active>
    <label>The Bridge</label>
</RecordType>