DevOps/force-app/main/default/objects/Program__c/recordTypes/Ballina_Clubhouse.recordType-meta.xml
<RecordType>
    <fullName>Ballina_Clubhouse</fullName>
    <active>true</active>
    <label>Ballina Clubhouse</label>
</RecordType>