DevOps/force-app/main/default/objects/Program__c/recordTypes/Bathurst_Clubhouse.recordType-meta.xml
<RecordType>
    <fullName>Bathurst_Clubhouse</fullName>
    <active>true</active>
    <label>Bathurst Clubhouse</label>
</RecordType>