DevOps/force-app/main/default/objects/Program__c/recordTypes/Broken_Hill_Clubhouse.recordType-meta.xml
<RecordType>
    <fullName>Broken_Hill_Clubhouse</fullName>
    <active>true</active>
    <label>Broken Hill Clubhouse</label>
</RecordType>