DevOps/force-app/main/default/objects/Program__c/recordTypes/Care_Connect.recordType-meta.xml
<RecordType>
    <fullName>Care_Connect</fullName>
    <active>true</active>
    <label>Care Connect</label>
</RecordType>