DevOps/force-app/main/default/objects/Program__c/recordTypes/Care_Connect_Hunter_Central_Coast.recordType-meta.xml
<RecordType>
    <fullName>Care_Connect_Hunter_Central_Coast</fullName>
    <active>true</active>
    <label>Care Connect - Hunter Central Coast</label>
</RecordType>