DevOps/force-app/main/default/objects/Program__c/recordTypes/Care_Connect_Hunter_Manning.recordType-meta.xml
<RecordType>
    <fullName>Care_Connect_Hunter_Manning</fullName>
    <active>true</active>
    <label>Care Connect – Hunter Manning</label>
</RecordType>