DevOps/force-app/main/default/objects/Program__c/recordTypes/Care_Finder.recordType-meta.xml
<RecordType>
    <fullName>Care_Finder</fullName>
    <active>true</active>
    <label>Care Finder</label>
</RecordType>