DevOps/force-app/main/default/objects/Program__c/recordTypes/CETS.recordType-meta.xml
<RecordType>
    <fullName>CETS</fullName>
    <active>true</active>
    <description>Connecting Employment Transport Service</description>
    <label>CETS</label>
</RecordType>