DevOps/force-app/main/default/objects/Program__c/recordTypes/Clubhouse.recordType-meta.xml
<RecordType>
    <fullName>Clubhouse</fullName>
    <active>true</active>
    <label>Clubhouse</label>
</RecordType>