DevOps/force-app/main/default/objects/Program__c/recordTypes/Connect_Home_Adult_COI.recordType-meta.xml
<RecordType>
    <fullName>Connect_Home_Adult_COI</fullName>
    <active>true</active>
    <label>Connect Home - Adult - COI</label>
</RecordType>