DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Adult.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Adult</fullName>
    <active>true</active>
    <label>Connecting Home - Adult</label>
</RecordType>