DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Adult_Complex.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Adult_Complex</fullName>
    <active>true</active>
    <label>Connecting Home - Adult Complex</label>
</RecordType>