DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Adult_Complex_COI.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Adult_Complex_COI</fullName>
    <active>true</active>
    <label>Connecting Home - Adult Complex - COI</label>
</RecordType>