DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Byron_Assertive_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Byron_Assertive_Outreach</fullName>
    <active>true</active>
    <label>Connecting Home Byron Assertive Outreach</label>
</RecordType>