DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_HYAP.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_HYAP</fullName>
    <active>true</active>
    <label>Connecting Home - HYAP</label>
</RecordType>