DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_HYAP_COI.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_HYAP_COI</fullName>
    <active>true</active>
    <label>Connecting Home - HYAP - COI</label>
</RecordType>