DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Northern_Youth.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Northern_Youth</fullName>
    <active>true</active>
    <label>Connecting Home - Northern Youth</label>
</RecordType>