DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Northern_Youth_COI.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Northern_Youth_COI</fullName>
    <active>true</active>
    <label>Connecting Home - Northern Youth - COI</label>
</RecordType>