DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Tweed_Assertive_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Tweed_Assertive_Outreach</fullName>
    <active>true</active>
    <description>Connecting Home Tweed Assertive Outreach / Tweed Rough Sleepers</description>
    <label>Connecting Home Tweed Assertive Outreach</label>
</RecordType>