DevOps/force-app/main/default/objects/Program__c/recordTypes/Connecting_Home_Tweed_Assertive_Outreach_COI.recordType-meta.xml
<RecordType>
    <fullName>Connecting_Home_Tweed_Assertive_Outreach_COI</fullName>
    <active>true</active>
    <label>Connecting Home Tweed Assertive Outreach - COI</label>
</RecordType>