DevOps/force-app/main/default/objects/Program__c/recordTypes/Elements.recordType-meta.xml
<RecordType>
    <fullName>Elements</fullName>
    <active>true</active>
    <label>Elements</label>
</RecordType>