DevOps/force-app/main/default/objects/Program__c/recordTypes/Elements_COI.recordType-meta.xml
<RecordType>
    <fullName>Elements_COI</fullName>
    <active>true</active>
    <label>Elements - COI</label>
</RecordType>