DevOps/force-app/main/default/objects/Program__c/recordTypes/Family_Connect_Schools.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_Schools</fullName>
    <active>true</active>
    <label>Family Connect - Schools</label>
</RecordType>