DevOps/force-app/main/default/objects/Program__c/recordTypes/Family_Connect_Support.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_Support</fullName>
    <active>true</active>
    <label>Family Connect &amp; Support</label>
</RecordType>