DevOps/force-app/main/default/objects/Program__c/recordTypes/Family_Connect_Support_COI.recordType-meta.xml
<RecordType>
    <fullName>Family_Connect_Support_COI</fullName>
    <active>true</active>
    <label>Family Connect &amp; Support - COI</label>
</RecordType>