DevOps/force-app/main/default/objects/Program__c/recordTypes/Family_Referral_Service_FRS.recordType-meta.xml
<RecordType>
    <fullName>Family_Referral_Service_FRS</fullName>
    <active>true</active>
    <label>Family Referral Service</label>
</RecordType>