DevOps/force-app/main/default/objects/Program__c/recordTypes/Getting_it_Together.recordType-meta.xml
<RecordType>
    <fullName>Getting_it_Together</fullName>
    <active>true</active>
    <label>Getting it Together</label>
</RecordType>