DevOps/force-app/main/default/objects/Program__c/recordTypes/headspace_Lismore.recordType-meta.xml
<RecordType>
    <fullName>headspace_Lismore</fullName>
    <active>true</active>
    <label>headspace - Lismore</label>
</RecordType>