DevOps/force-app/main/default/objects/Program__c/recordTypes/headspace_Tweed_Heads.recordType-meta.xml
<RecordType>
    <fullName>headspace_Tweed_Heads</fullName>
    <active>true</active>
    <label>headspace - Tweed Heads</label>
</RecordType>