DevOps/force-app/main/default/objects/Program__c/recordTypes/Medicare_Mental_Health_Centre.recordType-meta.xml
<RecordType>
    <fullName>Medicare_Mental_Health_Centre</fullName>
    <active>true</active>
    <label>Medicare Mental Health Centre</label>
</RecordType>