DevOps/force-app/main/default/objects/Program__c/recordTypes/Mijung_Jarjums_Kids_in_Mind_MJKIM.recordType-meta.xml
<RecordType>
    <fullName>Mijung_Jarjums_Kids_in_Mind_MJKIM</fullName>
    <active>true</active>
    <label>Mijung Jarjums Kids in Mind (MJKIM)</label>
</RecordType>