DevOps/force-app/main/default/objects/Program__c/recordTypes/NDIA_Local_Area_Coordination.recordType-meta.xml
<RecordType>
    <fullName>NDIA_Local_Area_Coordination</fullName>
    <active>true</active>
    <description>A Program to reference Cases in the LAC Program, primarily for reporting purposes only</description>
    <label>NDIA Local Area Coordination</label>
</RecordType>