DevOps/force-app/main/default/objects/Program__c/recordTypes/NDIS.recordType-meta.xml
<RecordType>
    <fullName>NDIS</fullName>
    <active>true</active>
    <description>NDIS program referrer</description>
    <label>NDIS</label>
</RecordType>