DevOps/force-app/main/default/objects/Program__c/recordTypes/Old_Byron_Hospital.recordType-meta.xml
<RecordType>
    <fullName>Old_Byron_Hospital</fullName>
    <active>true</active>
    <label>Old Byron Hospital</label>
</RecordType>