DevOps/force-app/main/default/objects/Program__c/recordTypes/Opportunity_Pathways.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Pathways</fullName>
    <active>true</active>
    <label>Opportunity Pathways</label>
</RecordType>