DevOps/force-app/main/default/objects/Program__c/recordTypes/Pathfinders_FCS.recordType-meta.xml
<RecordType>
    <fullName>Pathfinders_FCS</fullName>
    <active>true</active>
    <label>Pathfinders FCS</label>
</RecordType>