DevOps/force-app/main/default/objects/Program__c/recordTypes/Phillip_Street_Transition.recordType-meta.xml
<RecordType>
    <fullName>Phillip_Street_Transition</fullName>
    <active>true</active>
    <label>Phillip Street Transition</label>
</RecordType>