DevOps/force-app/main/default/objects/Program__c/recordTypes/Reconnect_COI.recordType-meta.xml
<RecordType>
    <fullName>Reconnect_COI</fullName>
    <active>true</active>
    <label>Reconnect - COI</label>
</RecordType>