DevOps/force-app/main/default/objects/Program__c/recordTypes/Reconnnect.recordType-meta.xml
<RecordType>
    <fullName>Reconnnect</fullName>
    <active>true</active>
    <label>Reconnnect</label>
</RecordType>