DevOps/force-app/main/default/objects/Program__c/recordTypes/Recovery_Connect.recordType-meta.xml
<RecordType>
    <fullName>Recovery_Connect</fullName>
    <active>true</active>
    <label>Recovery Connect</label>
</RecordType>