DevOps/force-app/main/default/objects/Program__c/recordTypes/Resilient_Kids.recordType-meta.xml
<RecordType>
    <fullName>Resilient_Kids</fullName>
    <active>true</active>
    <label>Resilient Kids</label>
</RecordType>