DevOps/force-app/main/default/objects/Program__c/recordTypes/Resilient_Kids_COI.recordType-meta.xml
<RecordType>
    <fullName>Resilient_Kids_COI</fullName>
    <active>true</active>
    <label>Resilient Kids - COI</label>
</RecordType>