DevOps/force-app/main/default/objects/Program__c/recordTypes/Standby_Response_Service.recordType-meta.xml
<RecordType>
    <fullName>Standby_Response_Service</fullName>
    <active>true</active>
    <label>Standby Response Service</label>
</RecordType>