DevOps/force-app/main/default/objects/Program__c/recordTypes/Standing_Strong.recordType-meta.xml
<RecordType>
    <fullName>Standing_Strong</fullName>
    <active>true</active>
    <label>Standing Strong</label>
</RecordType>