DevOps/force-app/main/default/objects/Program__c/recordTypes/Strong_Minds_in_the_Early_Years.recordType-meta.xml
<RecordType>
    <fullName>Strong_Minds_in_the_Early_Years</fullName>
    <active>true</active>
    <label>Strong Minds in the Early Years</label>
</RecordType>