DevOps/force-app/main/default/objects/Program__c/recordTypes/Supported_TA.recordType-meta.xml
<RecordType>
    <fullName>Supported_TA</fullName>
    <active>true</active>
    <label>Supported TA</label>
</RecordType>