DevOps/force-app/main/default/objects/Program__c/recordTypes/The_Indie_Project.recordType-meta.xml
<RecordType>
    <fullName>The_Indie_Project</fullName>
    <active>true</active>
    <label>The Indie Project</label>
</RecordType>