DevOps/force-app/main/default/objects/Program__c/recordTypes/Veterans_Connect.recordType-meta.xml
<RecordType>
    <fullName>Veterans_Connect</fullName>
    <active>true</active>
    <label>Veterans Connect</label>
</RecordType>