DevOps/force-app/main/default/objects/Program__c/recordTypes/Youth_on_Track.recordType-meta.xml
<RecordType>
    <fullName>Youth_on_Track</fullName>
    <active>true</active>
    <description>Youth on Track - youth justice program funded by Department of Justice</description>
    <label>Youth on Track</label>
</RecordType>