DevOps/force-app/main/default/objects/Program__c/listViews/All_Active_Programs.listView-meta.xml
<ListView>
    <fullName>All_Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Program_Manager__c</columns>
    <columns>DEX_Reporter__c</columns>
    <columns>AIHW_Reporter__c</columns>
    <columns>Program_is_a_Nadabase_Reporter__c</columns>
    <columns>Program_is_a_PMHC_Reporter__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Programs</label>
</ListView>